# fastapi-redis

./: .env.example  .talismanrc  README.md  pyproject.toml
src/: api.py  job.py  pub_bullmq.py  redismq.py  sub_bullmq.py  sub_num.py
src/consumer/: msg.py  num.py
src/producer/: msg.py
